--- a/client/client.html
+++ b/client/client.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Our simple HTTP server</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
-  
+
   <script>
+    const handleResponse = async (response) => {
+      // switch (response.status) {
+      //   case 200:
+      //     content.innerHTML = '<b>Success</b>';
+      //     break;
+      //   case 401:
+      //     content.innerHTML = '<b>Created</b>';
+      //     break;
+      //   case :
+      //     content.innerHTML = '<b>Updated (No Content)</b>';
+      //     return;
+      //   case 400:
+      //     content.innerHTML = '<b>Bad Request</b>';
+      //     break;
+      //   default:
+      //     content.innerHTML = 'Error code not implemented by client.';
+      //     break;
+      // }
+
+      const contentType = response.headers.get('Content-Type');
+      const content = document.querySelector('#content');
+      content.innerHTML = '';
+
+      const h1 = document.createElement('h1');
+      const p = document.createElement('p');
+
+      const resText = await response.text();
+
+      if (contentType === 'application/json') {
+        const parsedResponse = JSON.parse(resText);
+        h1.textContent = `${response.statusText}`;
+        p.textContent = `Message: ${parsedResponse.message}`;
+      }
+      else if (contentType === 'text/xml') {
+        const parsedResponse = new window.DOMParser().parseFromString(resText, 'text/xml');
+        h1.textContent = `${response.statusText}`;
+        p.textContent = `Message: ${parsedResponse.querySelector('message').textContent}`;
+      }
+
+      content.appendChild(h1);
+      content.appendChild(p);
+    };
+
+    const sendGet = async (page, type) => {
+      const pageSelected = page.options[page.selectedIndex].value;
+      const typeContent = type.options[type.selectedIndex].value;
+
+      const response = await fetch(pageSelected, {
+        method: 'GET',
+        headers: { 'Accept': typeContent }
+      });
+
+      handleResponse(response);
+    };
+
+    const init = () => {
+
+      const page = document.querySelector('#page');
+      const type = document.querySelector('#type');
+      const send = document.querySelector('#send');
+
+      const getMedia = (e) => {
+        e.preventDefault();
+        sendGet(page, type);
+        return false;
+      };
+
+      send.addEventListener('click', getMedia);
+    };
+
+    window.onload = init;
 
   </script>
 </head>
+
 <body>
   <section id="top">
     <h3>Status Code Tests</h3>
@@ -29,4 +102,5 @@
   <section id="content">
   </section>
 </body>
+
 </html>
